[package]
name = "actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {version = "4", features = ["openssl"]}
openssl = { version = "0.10" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tokio = { version = "1", features = ["full"] }
actix-multipart = "0.6"
futures-util = "0.3"